Cleaning up medicare procedures case study

--- a/Narrative/Overall_Outline.html
+++ b/Narrative/Overall_Outline.html
@@ -91,11 +91,15 @@
 <p>There are also other formats for categorical data, e.g. trees. Those are beyond the scope of this course.</p>
 <p>The rectangular data format is sufficiently general and powerful that, for many researchers and information workers, it is the only format they will need to work with. It’s hugely important in the economy, in management, government, and science.</p>
 </div>
-<div id="graphics-and-glyphs" class="section level2">
-<h2>Graphics and Glyphs</h2>
+<div id="zoology-of-graphics" class="section level2">
+<h2>Zoology of Graphics</h2>
 <p>Graphical presentations take on many diverse forms.</p>
 <p>Examples (e.g. from Andy Z’s sheet.)</p>
-<p>Three major types: * cases * dots, bars, lines (as in parallel coordinates) * networks * glyph types: nodes and edges, direction, * collectives (e.g. densities, …) * glyph types: bars, functions (e.g. densities), hex bin density, box-and-whisker plots…</p>
+<p>Think how you might classify such graphs. Are there groups of similar structure? What are the features that you can use to define what constitutes a group?</p>
+</div>
+<div id="graphics-grammar-and-glyphs" class="section level2">
+<h2>Graphics, Grammar, and Glyphs</h2>
+<p>Three major types: <em>One</em>, <em>Two</em>, <em>Many</em> * cases * dots, bars, lines (as in parallel coordinates) * networks * glyph types: nodes and edges, direction, * collectives (e.g. densities, …) * glyph types: bars, functions (e.g. densities), hex bin density, box-and-whisker plots…</p>
 <div id="constructing-graphics" class="section level3">
 <h3>Constructing Graphics</h3>
 <p>How to map data onto glphys.</p>
