Started on "Kinds of Data"
More on case studies.

Putting the DCF-devel package in the repo.  This can be installed with install_github("dtkaplan/DCF-2014/DCF-devel")

--- a/CaseStudies/TopicList.html
+++ b/CaseStudies/TopicList.html
@@ -46,6 +46,12 @@
 </div>
 
 
+<div id="data-organization" class="section level2">
+<h2>Data Organization</h2>
+<ol style="list-style-type: decimal">
+<li>Cases and variables</li>
+</ol>
+</div>
 <div id="graphics" class="section level2">
 <h2>Graphics</h2>
 <div id="one-case-at-a-time-individuals" class="section level3">
@@ -54,14 +60,17 @@
 <li>Scatterplot</li>
 <li>Dotplot</li>
 <li>Box-and-whiskers plot</li>
-<li>Barplot</li>
+<li>Barplot
+<ol style="list-style-type: lower-alpha">
+<li>stacked</li>
+</ol></li>
 <li>Parallel Axes</li>
 </ol>
 </div>
 <div id="two-cases-at-a-time-connections" class="section level3">
-<h3>Two Cases at a Time <strong>Connections</strong></h3>
+<h3>Two Cases at a Time: <strong>Connections</strong></h3>
 <ol style="list-style-type: decimal">
-<li>Graph
+<li>Graph <a href="http://www.r-bloggers.com/network-visualization-in-r-with-the-igraph-package/">A blog tutorial on igraph</a> shows how to set colors, etc. <a href="http://www.lsi.upc.edu/~CSN/lab/session1.pdf">A more detailed tutorial</a>
 <ol style="list-style-type: lower-alpha">
 <li>Directed</li>
 <li>Undirected</li>
@@ -70,7 +79,7 @@
 </ol>
 </div>
 <div id="many-cases-at-a-time-collectives" class="section level3">
-<h3>Many Cases at a Time <strong>Collectives</strong></h3>
+<h3>Many Cases at a Time: <strong>Collectives</strong></h3>
 <ol style="list-style-type: decimal">
 <li>density</li>
 <li>histogram</li>
@@ -82,8 +91,14 @@
 <h2>Data Table Operations</h2>
 <ol style="list-style-type: decimal">
 <li>Select variables (Relational PROJECT)</li>
-<li>Filter (RELATIONAL SELECT)</li>
-<li>Mutate</li>
+<li>Filter (RELATIONAL SELECT)
+<ol style="list-style-type: lower-alpha">
+<li>head, tail — to pull out the early ones</li>
+</ol></li>
+<li>Mutate
+<ol style="list-style-type: lower-alpha">
+<li>conditional choice</li>
+</ol></li>
 <li>Group (RELATIONAL GROUP)
 <ol style="list-style-type: lower-alpha">
 <li>tally</li>
