Dividing topics into Days

--- a/ReOrganizedJune10/TopicList.html
+++ b/ReOrganizedJune10/TopicList.html
@@ -53,7 +53,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="header">
 <h1 class="title">DCF Topics</h1>
-<h4 class="date"><em>Tue Jun 10 18:47:07 2014</em></h4>
+<h4 class="date"><em>Tue Jun 10 19:21:20 2014</em></h4>
 </div>
 
 
@@ -69,7 +69,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p>An essay about <a href="http://schoolofdata.org/handbook/courses/data-to-diagrams/">presenting data with graphics</a></p>
 <p><a href="http://columbia-applied-data-science.github.io/appdatasci.pdf">Applied Data Science from Columbia</a></p>
 <p><a href="http://www.manyeyes.com/software/analytics/manyeyes/">Manyeyes graphics examples</a></p>
-<p>=============== Day 1 ========================</p>
+</div>
+<div id="day-1" class="section level4">
+<h4>=============== Day 1 ========================</h4>
 </div>
 <div id="a.-introduction" class="section level3">
 <h3>A. Introduction</h3>
@@ -100,6 +102,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>Flight data involving two airports compared to airport data (e.g. latitude and longitude) on its own. Taxi time versus airport. Airplane model data: mass and engines</li>
 </ol></li>
 </ol></li>
+<li>Various common formats: CSV, XLSX</li>
 <li>Database:
 <ol style="list-style-type: lower-roman">
 <li><strong>Database</strong> is a collection of datatables. Often, the datatables have different cases.</li>
@@ -131,13 +134,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ul></li>
 </ol></li>
 <li>Other forms just a mention: “There are other forms of data, e.g. photographs, movies, text. The datatable is arguably the most important. Many other forms of data eventually get reduced to datatables for the purposes of display and analysis.”</li>
-<li>Reading and Storing Data
-<ol style="list-style-type: lower-alpha">
-<li>Various common formats: CSV, XLSX</li>
-<li>Informal formats (e.g. the Cherry Blossom race) for human consumption.</li>
-<li>Different ways data are distributed: interactive, static files, via URL</li>
-</ol></li>
-<li>Data Scraping: just a very brief mention of what it is.</li>
+<li>Reading and Storing Data</li>
 </ol>
 </div>
 <div id="c.-basics-of-markdown-and-course-logistics" class="section level3">
@@ -152,6 +149,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ul></li>
 </ol>
 <p>Idea: Start them out with the knitr side-by-side display function, so that things are re-run as they get changed. ????</p>
+<div id="day-2" class="section level4">
+<h4>=============== Day 2 ========================</h4>
+</div>
 </div>
 <div id="d.-basics-of-r" class="section level3">
 <h3>D. Basics of R</h3>
@@ -232,6 +232,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ol></li>
 <li>Putting such graphics in an Rmd file</li>
 </ol>
+<div id="day-3" class="section level4">
+<h4>=============== Day 3 ========================</h4>
+</div>
 </div>
 <div id="g.-constructing-and-deconstructing-graphics" class="section level3">
 <h3>G. Constructing and Deconstructing Graphics</h3>
@@ -262,6 +265,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>Annotations (later on)</li>
 <li>Coordinate transformations (later on — remember logs!)</li>
 </ol>
+<div id="day-4" class="section level4">
+<h4>=============== Day 4 ========================</h4>
+</div>
 </div>
 <div id="h.-classic-charts-and-their-interpretation" class="section level3">
 <h3>H. Classic charts and their interpretation</h3>
@@ -298,6 +304,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ol></li>
 <li>Trees and why not all networks are a tree</li>
 </ol>
+<div id="day-5" class="section level4">
+<h4>=============== Day 5 ========================</h4>
+</div>
 </div>
 <div id="i.-the-data-backstory-and-wrangling" class="section level3">
 <h3>I. The Data backstory and wrangling</h3>
@@ -340,6 +349,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ol></li>
 <li>pivot and fold (melt and cast)</li>
 </ol>
+<div id="day-6" class="section level4">
+<h4>=============== Day 6 ========================</h4>
+</div>
 </div>
 <div id="k.-stats" class="section level3">
 <h3>K. Stats</h3>
@@ -378,6 +390,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>Strip charts</li>
 <li>Dynamite plots, their shortcomings and alternatives</li>
 </ol>
+<div id="day-7" class="section level4">
+<h4>=============== Day 7 ========================</h4>
+</div>
 </div>
 <div id="m.-techniques-with-many-variables" class="section level3">
 <h3>M. Techniques with many variables</h3>
@@ -391,6 +406,10 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>Principal components</li>
 </ol></li>
 </ol>
+<div id="for-facultyself-study" class="section level4">
+<h4>=============== For Faculty/Self-study ========================</h4>
+<p>LOW PRIORITY</p>
+</div>
 </div>
 <div id="n.-cleaning-data" class="section level3">
 <h3>N. Cleaning Data</h3>
@@ -410,9 +429,13 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p><a href="http://www.quandl.com/">Quandl</a></p>
 <p>Genetics?</p>
 <p><a href="http://cran.r-project.org/web/views/WebTechnologies.html">Web technologies task view</a></p>
+<div id="optionalself-study" class="section level4">
+<h4>=============== Optional/Self-Study ========================</h4>
+</div>
 </div>
 <div id="p.-enrichments" class="section level3">
 <h3>P. Enrichments</h3>
+<p>LOWEST PRIORITY</p>
 <p>These are topics that don’t need to be handled as part of the sequence, but where we might want to have an essay or video, etc. to cover the topic briefly.</p>
 <ol style="list-style-type: decimal">
 <li>Presentation Tables It may seem odd to start a section on graphics with text, but concise text, easily assimulated by eye, is a form of graphics.</li>
@@ -424,11 +447,20 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>Advanced models and machine learning</li>
 <li>Voices of the experts</li>
 <li>Word Counts Look at different genres — show the leading non-common words.</li>
-<li>Word Cloud Counts don’t always do it.</li>
+<li>Word Cloud Counts don’t always do it.<br /></li>
+<li>Data Scraping: just a very brief mention of what it is.
+<ol style="list-style-type: lower-alpha">
+<li>Informal formats (e.g. the Cherry Blossom race) for human consumption.</li>
+<li>Different ways data are distributed: interactive, static files, via URL</li>
+</ol></li>
+<li>Meta graphics. What are the basic features we want to display? Comparison, extent, individual cases in context, relationships, connections. Why is a picture worth a thousand words and when is it not?</li>
+<li>Color and perceptions</li>
+<li>Which graphical features are suitable for precision, which not.</li>
+<li>Shapefiles and map coordinates</li>
+<li>The case studies (one essay/video for each)</li>
 </ol>
 <p><a href="GraphicsZoo/GraphicsZoo.html">Graphics Zoo</a></p>
-<p>Why is a picture worth a thousand words?</p>
-<p>What are the basic features we want to display? Comparison, extent, individual cases in context, relationships, connections, …</p>
+<p>What are the basic features we want to display? Comparison, extent, individual cases in context, relationships, connections</p>
 </div>
 
 
