Started on "Data Organization"

--- a/ReOrganizedJune10/index.html
+++ b/ReOrganizedJune10/index.html
@@ -61,7 +61,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="TOC">
 <ul>
-<li><a href="#week-1">Week 1</a></li>
+<li><a href="#week-1-infrastructure">Week 1: Infrastructure</a></li>
 <li><a href="#week-2">Week 2</a></li>
 <li><a href="#week-3">Week 3</a></li>
 <li><a href="#week-4">Week 4</a></li>
@@ -72,12 +72,18 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </ul>
 </div>
 
-<p>Eventually, this will be the front page for the course.</p>
-<div id="week-1" class="section level2">
-<h2>Week 1</h2>
+<div id="week-1-infrastructure" class="section level2">
+<h2>Week 1: Infrastructure</h2>
+<p><strong>Class Meeting</strong>: Tuesday 10 Sept.</p>
+<p><strong>Notes</strong>: * <a href="CourseNotes/DataOrganization/DraftNarrative.html">The Structure of Data</a> <strong>STILL IN DRAFT</strong> * <a href="CourseNotes/Rbasics/R-Basics.html">A Quick Start with R</a> * <a href="CourseNotes/DataOrganization/FileTypes.html">Paths and file types</a></p>
+<p><strong>Other resources</strong>:<br />* Videos: [Starting RStudio], [Creating an Rmd Document], [R Chunks in Rmd], [Handing in an Rmd Document]</p>
+<p><a href="Assignments/Assignment-One.html">Assignment One</a> due Wednesday 18 Sept.</p>
 </div>
 <div id="week-2" class="section level2">
 <h2>Week 2</h2>
+<p><strong>Class Meeting</strong>: Tuesday 17 Sept.</p>
+<p><strong>Notes</strong>: * <a href="CourseNotes/Rbasics/DraftNarrative.html">R Commands</a> NEEDS TO BE WRITTEN * <a href="CourseNotes/BasicDataCommands/DraftNarrative.html">Data Verbs</a> TO BE WRITTEN * <a href="CourseNotes/GraphingIntro/DraftNarrative.html">Glyphs, Frames, and Guides</a> TO BE WRITTEN</p>
+<p><a href="Assignment-Two.html">Assignment Two</a> due Thursday 19 Sept.</p>
 </div>
 <div id="week-3" class="section level2">
 <h2>Week 3</h2>
