More work on graphics basics

--- a/ReOrganizedJune10/index.html
+++ b/ReOrganizedJune10/index.html
@@ -61,44 +61,58 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="TOC">
 <ul>
+<li><a href="#to-do">To do</a></li>
 <li><a href="#week-1-infrastructure">Week 1: Infrastructure</a></li>
 <li><a href="#week-2">Week 2</a></li>
-<li><a href="#week-3">Week 3</a></li>
-<li><a href="#week-4">Week 4</a></li>
-<li><a href="#week-5">Week 5</a></li>
-<li><a href="#week-6">Week 6</a></li>
-<li><a href="#week-7">Week 7</a></li>
+<li><a href="#week-three">Week Three</a></li>
+<li><a href="#week-4-data-backstory">Week 4: Data Backstory</a></li>
+<li><a href="#week-5-stats">Week 5: Stats</a></li>
+<li><a href="#week-6-multiple-variables">Week 6: Multiple Variables</a></li>
+<li><a href="#week-7-cleaning-scraping">Week 7: Cleaning, Scraping</a></li>
 <li><a href="#dtk-to-do-list">DTK To Do List</a></li>
 </ul>
 </div>
 
+<div id="to-do" class="section level2">
+<h2>To do</h2>
+<ul>
+<li>In DCFdevel, redefine <code>summarize()</code> and <code>summarise()</code> so that the basic functions have <code>na.rm=TRUE</code>????</li>
+<li>Change world cities population from integer to numeric.</li>
+<li>Change NaN in NHANES to NA</li>
+<li>Change all data in DCF to follow Capital dataframe name, lower-case variable name.</li>
+<li>BabyNamesYearly should be changed to just baby names.</li>
+</ul>
+</div>
 <div id="week-1-infrastructure" class="section level2">
 <h2>Week 1: Infrastructure</h2>
 <p><strong>Class Meeting</strong>: Tuesday 10 Sept.</p>
-<p><strong>Notes</strong>: * <a href="CourseNotes/DataOrganization/DraftNarrative.html">The Structure of Data</a> <strong>STILL IN DRAFT</strong> * <a href="CourseNotes/Rbasics/R-Basics.html">A Quick Start with R</a> * <a href="CourseNotes/DataOrganization/FileTypes.html">Paths and file types</a></p>
+<p><strong>Notes</strong>: * <a href="CourseNotes/DataOrganization/DraftNarrative.html">The Structure of Data</a> ** NEED TO break out exercises.** * <a href="CourseNotes/Rbasics/R-Basics.html">A Quick Start with R</a> * <a href="CourseNotes/DataOrganization/FileTypes.html">Paths and file types</a></p>
 <p><strong>Other resources</strong>:<br />* Videos: [Starting RStudio], [Creating an Rmd Document], [R Chunks in Rmd], [Handing in an Rmd Document]</p>
 <p><a href="Assignments/Assignment-One.html">Assignment One</a> due Wednesday 18 Sept.</p>
 </div>
 <div id="week-2" class="section level2">
 <h2>Week 2</h2>
 <p><strong>Class Meeting</strong>: Tuesday 17 Sept.</p>
-<p><strong>Notes</strong>: * <a href="CourseNotes/Rbasics/DraftNarrative.html">R Commands</a> NEEDS TO BE WRITTEN * <a href="CourseNotes/BasicDataCommands/DraftNarrative.html">Data Verbs</a> TO BE WRITTEN * <a href="CourseNotes/GraphingIntro/DraftNarrative.html">Glyphs, Frames, and Guides</a> TO BE WRITTEN</p>
+<p><strong>Notes</strong>: * <a href="CourseNotes/Rbasics/DraftNarrative.html">R Commands</a> NEEDS TO BE WRITTEN * <a href="CourseNotes/BasicDataCommands/DraftNarrative.html">Data Verbs</a> NEED TO Pull out exercises and the early notes about NHANES to turn into exercises. * <a href="CourseNotes/GraphingIntro/DraftNarrative.html">Glyphs, Frames, and Guides</a> TO BE WRITTEN</p>
 <p><a href="Assignment-Two.html">Assignment Two</a> due Thursday 19 Sept.</p>
 </div>
-<div id="week-3" class="section level2">
-<h2>Week 3</h2>
+<div id="week-three" class="section level2">
+<h2>Week Three</h2>
+<p><strong>Class Meeting</strong>: Tuesday 17 Sept.</p>
+<p><strong>Notes</strong>: * <a href="CourseNotes/BasicDataCommands/MoreDataVerbs.html">More Data Verbs</a> * Tidying Data * Classic charts * More Graphics Properties: Facets, layers.</p>
+<p><a href="Assignment-Three.html">Assignment Three</a> due Thursday 26 Sept.</p>
 </div>
-<div id="week-4" class="section level2">
-<h2>Week 4</h2>
+<div id="week-4-data-backstory" class="section level2">
+<h2>Week 4: Data Backstory</h2>
 </div>
-<div id="week-5" class="section level2">
-<h2>Week 5</h2>
+<div id="week-5-stats" class="section level2">
+<h2>Week 5: Stats</h2>
 </div>
-<div id="week-6" class="section level2">
-<h2>Week 6</h2>
+<div id="week-6-multiple-variables" class="section level2">
+<h2>Week 6: Multiple Variables</h2>
 </div>
-<div id="week-7" class="section level2">
-<h2>Week 7</h2>
+<div id="week-7-cleaning-scraping" class="section level2">
+<h2>Week 7: Cleaning, Scraping</h2>
 </div>
 <div id="dtk-to-do-list" class="section level2">
 <h2>DTK To Do List</h2>
