Added blanks for drill

--- a/Drill/Week-3.html
+++ b/Drill/Week-3.html
@@ -53,6 +53,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
+<div id="week-3" class="section level2">
+<h2>Week 3</h2>
 <div id="multiple-choice" class="section level3">
 <h3>Multiple Choice</h3>
 <p>There are three (simple) steps to creating a multiple-choice problem in <em>ScoreR</em>:</p>
@@ -85,7 +87,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 &quot;reward&quot;: &quot;Right!&quot;,
 &quot;content&quot;: &quot;D&quot; 
 }"> <b>D</b></label> There’s no such thing as a negative number, just a negative attitude. <input type="text" readonly="readonly" style="color:green" size="3" id="ScoreR1out"></input><select style="visibility: hidden" width="5" name="ScoreR1info"><option value="{
- &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+ &quot;setID&quot;: &quot;DCF-Assignment3&quot;,
 &quot;itemN&quot;:      1,
 &quot;name&quot;: &quot;minus1&quot;,
 &quot;totalpts&quot;:      5,
@@ -126,7 +128,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 &quot;reward&quot;: &quot;Right!&quot;,
 &quot;content&quot;: &quot;6.28318&quot; 
 }">6.28318</option></select><small><input type="text" readonly="readonly" style="color:green" size="3" id="ScoreR2out"></input></small><select style="visibility: hidden" width="5" name="ScoreR2info"><option value="{
- &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+ &quot;setID&quot;: &quot;DCF-Assignment3&quot;,
 &quot;itemN&quot;:      2,
 &quot;name&quot;: &quot;piValue3&quot;,
 &quot;totalpts&quot;:      4,
@@ -139,7 +141,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p>The <code>freeText()</code> function in <code>ScoreR</code> implements free-text entry. It’s very, very simple to add a free-text question to a problem. Just</p>
 <textarea cols="30" rows="2" id="ScoreR3" placeholder="Your answer here ..."></textarea>
 <p><select style="visibility: hidden" width="5" name="ScoreR3info"><option value="{
- &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+ &quot;setID&quot;: &quot;DCF-Assignment3&quot;,
 &quot;itemN&quot;:      3,
 &quot;name&quot;: &quot;question-topic&quot;,
 &quot;totalpts&quot;:     10,
@@ -194,7 +196,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 &quot;reward&quot;: &quot;Right!&quot;,
 &quot;content&quot;: &quot;G&quot; 
 }"> <b>G</b></label> <span class="math">\(0.03 \pm 0.01\)</span><br /><input type="text" readonly="readonly" style="color:green" size="3" id="ScoreR4out"></input><select style="visibility: hidden" width="5" name="ScoreR4info"><option value="{
- &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+ &quot;setID&quot;: &quot;DCF-Assignment3&quot;,
 &quot;itemN&quot;:      4,
 &quot;name&quot;: &quot;confidence.interval&quot;,
 &quot;totalpts&quot;:      1,
@@ -230,7 +232,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 &quot;reward&quot;: &quot;Right!&quot;,
 &quot;content&quot;: &quot;E&quot; 
 }"> <b>E</b></label> <span class="math">\(99.647 \pm 1.489\)</span> <input type="text" readonly="readonly" style="color:green" size="3" id="ScoreR5out"></input><select style="visibility: hidden" width="5" name="ScoreR5info"><option value="{
- &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+ &quot;setID&quot;: &quot;DCF-Assignment3&quot;,
 &quot;itemN&quot;:      5,
 &quot;name&quot;: &quot;confidence.interval.2&quot;,
 &quot;totalpts&quot;:      1,
@@ -238,6 +240,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 &quot;reward&quot;: &quot;&quot; 
 }">Question info</option></select></p>
 <p><select style="visibility: hidden" width="5" name="roster"><option value="[ &quot;minus1&quot;, &quot;piValue3&quot;, &quot;question-topic&quot;, &quot;confidence.interval&quot;, &quot;confidence.interval.2&quot; ]">problem roster</option></select></p>
+</div>
 </div>
 
 
